k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: node-learn
  labels:
    name: node-learn
    app: quiz-application
